# gnome-robots

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  Cargo.toml  ChangeLog  FLATPAK.md  Makefile.am  NEWS  README.md  classic_robots.cfg  configure.ac  cursor-down-left.h  cursor-down-right.h  cursor-left.h  cursor-right.h  cursor-up-left.h  cursors.c  cursors.h  format-code  func-doc.html  game.c  game.h  gameconfig.c  gameconfig.h  gbdefs.h  gnobots.c  gnobots.h  gnobots2.6  gnobots2.desktop  gnobots2.desktop.in  gnobots2.desktop.in.in  gnobots2.schemas.in  gnobots2.soundlist  gnobots2.soundlist.in  gnome-robots.doap  graphics.c  graphics.h  keyboard.c  keyboard.h  (+14 more)
build-aux/: org.gnome.Robots.json
data/: Makefile.am  app-menu.ui  gnobots2.desktop.in.in  gnome-robots.6  gnome-robots.appdata.xml  gnome-robots.appdata.xml.in  gnome-robots.desktop.in  gnome-robots.desktop.in.in  meson.build  org.gnome.Robots.appdata.xml.in  org.gnome.Robots.desktop.in  org.gnome.Robots.gschema.xml  org.gnome.Robots.metainfo.xml.in  org.gnome.Robots.service.in  org.gnome.gnobots2.gschema.xml.in  org.gnome.robots.gschema.xml  org.gnome.robots.gschema.xml.in
data/cursors/: cursors.xcf
data/games/: classic_robots.cfg  nightmare.cfg  robots2.cfg  robots2_easy.cfg  robots_with_safe_teleport.cfg
data/icons/: Makefile.am  meson.build
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
help/: .gitignore  ChangeLog  ChangeLog.old  LINGUAS  Makefile.am  gnobots2.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  appearance.page  basics.page  controls-change.page  controls-default.page  game-types.page  gnobots2-C.omf  gnobots2.sgml  gnobots2.xml  index.docbook  index.html  index.page  moves.page  scores.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: .cvsignore  Makefile.am  da.po  gnobots2-da.omf  gnobots2.xml  index.html
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: .cvsignore  Makefile.am  es.po  gnobots2-es.omf  gnobots2.xml  index.html  legal.xml
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: .cvsignore  Makefile.am  gnobots2-it.omf  gnobots2.xml  index.html  it.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  (+54 more)
src/: Makefile.am  animation.rs  animation.vala  application.rs  application.vala  arena.rs  arena.vala  assets.rs  assets.vala  bubble.rs  bubble.vala  config.rs.in  config.vapi  controls.vala  cursor-down-left.h  cursor-down-right.h  cursor-down.h  cursor-hold.h  cursor-left.h  cursor-right.h  cursor-up-left.h  cursor-up-right.h  cursor-up.h  cursors.c  cursors.h  cursors.rs  cursors.vala  file-list.vala  find-file.c  find-file.h  find-file.vala  game-area.vala  game-config.vala  game.c  game.h  game.rs  game.vala  game_area.rs  game_config.rs  gameconfig.c  (+64 more)
src/controls/: controls.rs  editor.rs  mod.rs
src/scores/: category_bar.rs  dialog.rs  grid.rs  mod.rs  new_score_dialog.rs  no_scores.rs  scores.rs  scores_dialog.rs
uncrustify/: Dockerfile  uncrustify.cfg
