[package]
name = "gnome-robots"
version = "41.2.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["gnome_47"] }
adw = { package = "libadwaita", version = "0.8", features = ["v1_6"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
librsvg = "2.61"
rand = "0.8"
async-channel = "2.1.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
