# The languages below have not converted to gnome-doc-utils yet;
# remove your language code from SUBDIRS here and from AC_CONFIG_FILES
# in configure.in once you've migrated.

SUBDIRS = da

# GNOME doc utils

include $(top_srcdir)/gnome-doc-utils.make

DOC_LINGUAS = ca de es fr it oc sv

DOC_MODULE = gnobots2

DOC_ENTITIES = \
	legal.xml

DOC_FIGURES = \
	figures/gnobots2-main.png

dist-hook: doc-dist-hook
