@YELP_HELP_RULES@
HELP_ID = gnome-robots

HELP_MEDIA = \
	figures/boo-high-risk.png \
	figures/boo-low-risk.png \
	figures/gnome-high-risk.png \
	figures/gnome-low-risk.png \
	figures/gnome-robots.png \
	figures/random.png \
	figures/robots-high-risk.png \
	figures/robots-low-risk.png \
	figures/teleport.png \
	figures/ufo-high-risk.png \
	figures/ufo-low-risk.png \
	figures/wait.png


HELP_FILES = \
	appearance.page \
	basics.page \
	controls-change.page \
	controls-default.page \
	game-types.page \
	index.page \
	moves.page \
	scores.page \
	legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fr it oc sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
