@YELP_HELP_RULES@
HELP_ID = gnome-robots

HELP_MEDIA = \
	figures/anthills-high-risk.png \
	figures/anthills-low-risk.png \
	figures/boo-high-risk.png \
	figures/boo-low-risk.png \
	figures/cows-high-risk.png \
	figures/cows-low-risk.png \
	figures/eggs-high-risk.png \
	figures/eggs-low-risk.png \
	figures/gnomes-high-risk.png \
	figures/gnomes-low-risk.png \
	figures/gnome-robots.png \
	figures/mice-high-risk.png \
	figures/mice-low-risk.png \
	figures/new.png \
	figures/random.png \
	figures/robots-high-risk.png \
	figures/robots-low-risk.png \
	figures/spills-high-risk.png \
	figures/spills-low-risk.png \
	figures/teleport.png \
	figures/stormclouds-high-risk.png \
	figures/stormclouds-low-risk.png \
	figures/toasters-high-risk.png \
	figures/toasters-low-risk.png \
	figures/ufo-high-risk.png \
	figures/ufo-low-risk.png \
	figures/wait.png


HELP_FILES =\
	appearance.page\
	basics.page\
	controls-change.page\
	controls-default.page\
	game-types.page\
	index.page\
	moves.page\
	scores.page\
	legal.xml

HELP_LINGUAS = ca cs da de el en_GB es eu fr hu it oc sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
