help_media = [
    'anthills-high-risk.png',
    'anthills-low-risk.png',
    'boo-high-risk.png',
    'boo-low-risk.png',
    'cows-high-risk.png',
    'cows-low-risk.png',
    'eggs-high-risk.png',
    'eggs-low-risk.png',
    'gnome-robots.png',
    'gnomes-high-risk.png',
    'gnomes-low-risk.png',
    'mice-high-risk.png',
    'mice-low-risk.png',
    'robots-high-risk.png',
    'robots-low-risk.png',
    'spills-high-risk.png',
    'spills-low-risk.png',
    'stormclouds-high-risk.png',
    'stormclouds-low-risk.png',
    'toasters-high-risk.png',
    'toasters-low-risk.png',
    'ufo-high-risk.png',
    'ufo-low-risk.png'
]

help_pages = [
    'appearance.page',
    'basics.page',
    'controls-change.page',
    'controls-default.page',
    'game-types.page',
    'index.page',
    'legal.xml',
    'moves.pages',
    'scores.page'
]

gnome.yelp(meson.project_name(),
    sources: help_pages,
    media: help_media,
    symlink_media: true
)