help_media = [
    'figures/anthills-high-risk.png',
    'figures/anthills-low-risk.png',
    'figures/boo-high-risk.png',
    'figures/boo-low-risk.png',
    'figures/cows-high-risk.png',
    'figures/cows-low-risk.png',
    'figures/eggs-high-risk.png',
    'figures/eggs-low-risk.png',
    'figures/gnomes-high-risk.png',
    'figures/gnomes-low-risk.png',
    'figures/mice-high-risk.png',
    'figures/mice-low-risk.png',
    'figures/org.gnome.Robots.svg',
    'figures/robots-high-risk.png',
    'figures/robots-low-risk.png',
    'figures/spills-high-risk.png',
    'figures/spills-low-risk.png',
    'figures/stormclouds-high-risk.png',
    'figures/stormclouds-low-risk.png',
    'figures/toasters-high-risk.png',
    'figures/toasters-low-risk.png',
    'figures/ufo-high-risk.png',
    'figures/ufo-low-risk.png'
]

help_pages = [
    'appearance.page',
    'basics.page',
    'controls-change.page',
    'controls-default.page',
    'game-types.page',
    'index.page',
    'legal.xml',
    'moves.page',
    'scores.page'
]

gnome.yelp(meson.project_name(),
    sources: help_pages,
    media: help_media,
    symlink_media: true
)