icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps
actiondir=$(datadir)/icons/hicolor/24x24/actions

icon16_DATA = 16x16/gnobots2.png
icon22_DATA = 22x22/gnobots2.png
icon24_DATA = 24x24/gnobots2.png
icon32_DATA = 32x32/gnobots2.png
icon48_DATA = 48x48/gnobots2.png
iconscalable_DATA = scalable/gnobots2.svg
action_DATA = teleport.png teleport-random.png

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon24_DATA) $(icon32_DATA) $(icon48_DATA) $(icon256_DATA) $(iconscalable_DATA) $(action_DATA)
